[project]
name = "pipeline"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kubernetes>=32.0.1",
    "python-gitlab>=5.6.0",
    "python-json-logger>=3.3.0",
    "rich>=14.0.0",
]

[project.scripts]
pipeline = "pipeline:__main__"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]
